// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="button-root btn btn-secondary"
    type="button"
  >
    foo
  </button>
</div>
`;

exports[`ButtonGroup should render 1`] = `
<div>
  <div
    class="btn-group"
    role="group"
  >
    foo
  </div>
</div>
`;

exports[`ButtonGroupItem should render 1`] = `
<div>
  <div
    class="btn-group-item"
  />
</div>
`;
